# project-manager

./: CMakeLists.txt
data/: CMakeLists.txt  com.github.tintou.project-manager.appdata.xml  com.github.tintou.project-manager.desktop.in  project-manager.appdata.xml
debian/: changelog  control  rules
po/: com.github.tintou.project-manager.pot
schemas/: CMakeLists.txt  com.github.tintou.project-manager.gschema.xml  org.pantheon.project-manager.gschema.xml
src/: Application.vala  CMakeLists.txt  Card.vala  Database.vala  MainWindow.vala  ProjectList.vala  Settings.vala
src/Objects/: Bug.vala  Person.vala  Platform.vala  Project.vala
src/Panels/: Blueprints.vala  Bugs.vala  Code.vala  Overview.vala
src/Platform/Launchpad/: Bug.vala  Person.vala  Platform.vala  Project.vala
